--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "react-scripts": "0.4.1"
   },
   "dependencies": {
+    "flex": "^0.2.0",
+    "flux": "^2.1.1",
     "history": "^4.0.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
